# app/Http/Controllers/API/BooksController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers\API;
 
+use App\Book;
 use App\Http\Requests\AddBookRequest;
 use App\Services\BookServices;
 use Illuminate\Http\JsonResponse;
@@ -48,7 +49,7 @@ class BooksController extends Controller
      *     @OA\Response(
      *         response="200",
      *         description="Everything is fine",
-     *         @OA\Schema(ref="#/components/schemas/BookStoreRequest")
+     *         @OA\JsonContent(ref="#/components/schemas/BookShowRequest")
      *     ),
      *     @OA\RequestBody(
      *         required=true,
@@ -57,31 +58,31 @@ class BooksController extends Controller
      * )
      * Store a newly created resource in storage.
      *
-     * @param AddBookRequest $request
-     * @return void
+     * @param \App\Http\Requests\AddBookRequest $request
+     * @return JsonResponse
      */
     public function store(AddBookRequest $request)
     {
-//        $book = new Book();
-//        $book->fill($request->all());
-//        $book->save();
-        $book = [
-            "id" => "5",
-            "title" => "sw",
-            "author" => "A",
-            "description" => "fdvbfds",
-            "book_cover" => "C:\Program Files (x86)\OpenServer\OSPanel\domains\myFramework\web\photo\photo3.jpg",
-            'category' => 'history',
-            "language" => "ngrfs",
-            "publishing_year" => "1981",
-            "created_at" => "2021-02-09 01:43:37",
-            "updated_at" => "2021-02-09 01:43:37"
-        ];
-        $save = new BookServices();
-        $save->saveBookDB($book);
+        $book = new Book();
+        $book->fill($request->all());
+        $book->save();
+//        $book = [
+//            "id" => "5",
+//            "title" => "sw",
+//            "author" => "A",
+//            "description" => "fdvbfds",
+//            "book_cover" => "C:\Program Files (x86)\OpenServer\OSPanel\domains\myFramework\web\photo\photo3.jpg",
+//            'category' => 'history',
+//            "language" => "ngrfs",
+//            "publishing_year" => "1981",
+//            "created_at" => "2021-02-09 01:43:37",
+//            "updated_at" => "2021-02-09 01:43:37"
+//        ];
+//        $save = new BookServices();
+//        $save->saveBookDB($book);
+        return response('', 201);
 
 //        return response()->json($book);
-        return response('', 201);
     }
 
     /**
