# storage/api-docs/api-docs.json
@@ -61,7 +61,14 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Everything is fine"
+                        "description": "Everything is fine",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BookShowRequest"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -69,6 +76,70 @@
     },
     "components": {
         "schemas": {
+            "BookShowRequest": {
+                "title": "Example storring request",
+                "description": "The request for book creation",
+                "properties": {
+                    "id": {
+                        "title": "ID",
+                        "description": "Book ID",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": "2"
+                    },
+                    "title": {
+                        "title": "Title",
+                        "description": "Book title",
+                        "type": "string",
+                        "example": "Star wars"
+                    },
+                    "author": {
+                        "title": "Author",
+                        "description": "Book author",
+                        "type": "string",
+                        "example": "Pushkin"
+                    },
+                    "description": {
+                        "title": "Description",
+                        "description": "Book description",
+                        "type": "string",
+                        "example": "Short book description"
+                    },
+                    "book_cover": {
+                        "title": "Book cover",
+                        "description": "Book cover image",
+                        "example": "Some image"
+                    },
+                    "category": {
+                        "title": "Category",
+                        "description": "Book category",
+                        "type": "string",
+                        "format": "string",
+                        "example": "history"
+                    },
+                    "language": {
+                        "title": "Language",
+                        "description": "Book language",
+                        "type": "string",
+                        "example": "English"
+                    },
+                    "publishing_year": {
+                        "title": "Publishing year",
+                        "description": "The year of book publishing ",
+                        "type": "integer",
+                        "format": "int32",
+                        "example": "1987"
+                    },
+                    "created_at": {
+                        "title": "Book created at",
+                        "description": "Book created at",
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2021-02-02 14:15:03"
+                    }
+                },
+                "type": "object"
+            },
             "BookStoreRequest": {
                 "title": "Example storring request",
                 "description": "The request for book creation",
@@ -76,12 +147,12 @@
                     "id": {
                         "title": "ID",
                         "description": "Book ID",
-                        "type": "string",
-                        "format": "int32",
+                        "type": "integer",
+                        "format": "int64",
                         "example": "1"
                     },
                     "title": {
-                        "title": "Book",
+                        "title": "Title",
                         "description": "Book title",
                         "type": "string",
                         "format": "string",
@@ -124,20 +195,13 @@
                     "publishing_year": {
                         "title": "Publishing year",
                         "description": "The year of book publishing ",
-                        "type": "string",
+                        "type": "integer",
                         "format": "int32",
                         "example": "1987"
                     },
                     "created_at": {
                         "title": "Book created at",
                         "description": "Book created at",
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2021-02-02 14:15:03"
-                    },
-                    "updated_at": {
-                        "title": "Book updated at",
-                        "description": "Book updated at",
                         "type": "string",
                         "format": "date-time",
                         "example": "2021-02-02 14:15:03"
